# tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build_docker.yml  build_docker_nightly.yml  build_docker_on_release.yml  test.yml
app/: main.py
app/api/: dictionary_models.py  dictionary_utils.py  mappings.py  models.py  utility.py
app/api/routers/: example_synthetic.json  openneuro.py
tests/: conftest.py  test_auth.py  test_routing.py  test_upload.py  test_utility.py
tests/test_data/original/: 0_indents.json  0_indents_nonewline.json  0_indents_singleline_withnewline.json  2tab_indents.json  3_indents.json
tests/test_data/updated/: 0_indents.json  0_indents_singleline_nonewline.json  0_indents_singleline_withnewline.json  2tab_indents.json  3_indents.json
