[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "openneuro-uploader-api"
description = "API for validating and uploading Neurobagel data dictionaries to OpenNeuroDatasets repositories."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Neurobagel Developers" }]
maintainers = [
  { name = "Alyssa Dai", email = "alyssa.dai@mcgill.ca" },
  { name = "Arman Jahanpour", email = "arman.jahanpour@mcgill.ca" },
  { name = "Sebastian Urchs", email = "sebastian.urchs@mcgill.ca" }
]
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",
  "Typing :: Typed",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
    "fastapi[standard]",
    "jsonschema",
    "orjson",
    "pydantic>=2.10,<3",
    "PyGithub"
]

[dependency-groups]
dev = [
  "pytest",
	"pytest-cov",
	"pre-commit"
]

[tool.hatch.version]
source = "vcs"  # use git tags to automatically determine the project version using hatch-vcs

[tool.hatch.build.hooks.vcs]
version-file = "app/_version.py"  # useful for accessing dynamically calculated version inside the app (e.g., to support a --version option)

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # do not append local version info to the version string to avoid PyPI upload errors

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
filter_files = true
line_length = 79